<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/grafo_navegacion"
    app:startDestination="@id/searchFragment">

    <action
        android:id="@+id/setting_button"
        app:destination="@id/settingsFragment" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.fruticion.fragments.SearchFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.fruticion.fragments.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.fruticion.fragments.SettingsFragment"
        android:label="@string/settings_header" />
</navigation>